--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cadastro — ConectaONG</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <header class="site-header">
@@ -20,32 +20,67 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container grid">
+  <div class="col-12">
     <h1>Cadastro de Voluntário</h1>
-    <form id="cadastroForm">
-      <fieldset>
-        <legend>Informações Pessoais</legend>
-        <label>Nome Completo <input type="text" required></label>
-        <label>E-mail <input type="email" required></label>
-        <label>CPF <input type="text" id="cpf" required></label>
-        <label>Telefone <input type="tel" id="telefone" required></label>
-        <label>Data de Nascimento <input type="date" required></label>
-      </fieldset>
-      <fieldset>
-        <legend>Endereço</legend>
-        <label>Endereço <input type="text" required></label>
-        <label>CEP <input type="text" id="cep" required></label>
-        <label>Cidade <input type="text" required></label>
-        <label>Estado
-          <select required>
-            <option value="">Selecione</option>
-            <option>SP</option><option>RJ</option><option>MG</option>
-          </select>
-        </label>
-      </fieldset>
+  </div>
+
+  <form id="cadastroForm" class="col-12 grid form-up" style="gap: var(--space-4);">
+    <!-- Informações Pessoais -->
+    <fieldset class="col-12 grid" style="gap: var(--space-3);">
+      <legend>Informações Pessoais</legend>
+
+      <label class="col-6">Nome Completo
+        <input type="text" required>
+      </label>
+
+      <label class="col-6">E-mail
+        <input type="email" required>
+      </label>
+
+      <label class="col-6">CPF
+        <input type="text" id="cpf" required>
+      </label>
+
+      <label class="col-6">Telefone
+        <input type="tel" id="telefone" required>
+      </label>
+
+      <label class="col-6">Data de Nascimento
+        <input type="date" required>
+      </label>
+    </fieldset>
+
+    <!-- Endereço -->
+    <fieldset class="col-12 grid" style="gap: var(--space-3);">
+      <legend>Endereço</legend>
+
+      <label class="col-6">Endereço
+        <input type="text" required>
+      </label>
+
+      <label class="col-6">CEP
+        <input type="text" id="cep" required>
+      </label>
+
+      <label class="col-6">Cidade
+        <input type="text" required>
+      </label>
+
+      <label class="col-6">Estado
+        <select required>
+          <option value="">Selecione</option>
+          <option>SP</option><option>RJ</option><option>MG</option>
+        </select>
+      </label>
+    </fieldset>
+
+    <div class="col-12" style="text-align:center;">
       <button type="submit" class="btn">Enviar</button>
-    </form>
-  </main>
+    </div>
+  </form>
+</main>
+
 
   <footer>
     <div class="container">
@@ -53,6 +88,6 @@
     </div>
   </footer>
 
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
