--- a/cadastro.html
+++ b/cadastro.html
@@ -10,77 +10,94 @@
   <header class="site-header">
     <div class="container">
       <a href="index.html" class="logo">ConectaONG</a>
+      <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="projetos.html">Projetos</a></li>
           <li><a href="cadastro.html">Cadastro</a></li>
+          <li class="has-dropdown">
+            <a href="#">Mais</a>
+            <ul class="dropdown">
+              <li><a href="contato.html">Contato</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="container grid">
-  <div class="col-12">
-    <h1>Cadastro de Voluntário</h1>
-  </div>
+<main class="container">
+  <h1>Cadastro de Voluntário</h1>
 
-  <form id="cadastroForm" class="col-12 grid form-up" style="gap: var(--space-4);">
+  <form id="cadastroForm">
     <!-- Informações Pessoais -->
-    <fieldset class="col-12 grid" style="gap: var(--space-3);">
+    <fieldset class="grid-2">
       <legend>Informações Pessoais</legend>
 
-      <label class="col-6">Nome Completo
-        <input type="text" required>
+      <label>
+        Nome Completo
+        <input type="text" name="nome" required>
       </label>
 
-      <label class="col-6">E-mail
-        <input type="email" required>
+      <label>
+        E-mail
+        <input type="email" name="email" id="email" required>
+        <span class="error-msg" style="color:red; font-size:0.85rem; display:none;">E-mail inválido</span>
       </label>
 
-      <label class="col-6">CPF
-        <input type="text" id="cpf" required>
+      <label>
+        CPF
+        <input type="text" name="cpf" id="cpf" required>
       </label>
 
-      <label class="col-6">Telefone
-        <input type="tel" id="telefone" required>
+      <label>
+        Telefone
+        <input type="tel" name="telefone" id="telefone" required>
       </label>
 
-      <label class="col-6">Data de Nascimento
-        <input type="date" required>
+      <label>
+        Data de Nascimento
+        <input type="date" name="nascimento" required>
       </label>
     </fieldset>
 
     <!-- Endereço -->
-    <fieldset class="col-12 grid" style="gap: var(--space-3);">
+    <fieldset class="grid-2">
       <legend>Endereço</legend>
 
-      <label class="col-6">Endereço
-        <input type="text" required>
+      <label>
+        Endereço
+        <input type="text" name="endereco" required>
       </label>
 
-      <label class="col-6">CEP
-        <input type="text" id="cep" required>
+      <label>
+        CEP
+        <input type="text" name="cep" id="cep" required>
       </label>
 
-      <label class="col-6">Cidade
-        <input type="text" required>
+      <label>
+        Cidade
+        <input type="text" name="cidade" required>
       </label>
 
-      <label class="col-6">Estado
-        <select required>
+      <label>
+        Estado
+        <select name="estado" required>
           <option value="">Selecione</option>
-          <option>SP</option><option>RJ</option><option>MG</option>
+          <option value="SP">SP</option>
+          <option value="RJ">RJ</option>
+          <option value="MG">MG</option>
         </select>
       </label>
     </fieldset>
 
-    <div class="col-12" style="text-align:center;">
+    <!-- Botão Enviar -->
+    <div class="btn-container">
       <button type="submit" class="btn">Enviar</button>
     </div>
   </form>
 </main>
-
 
   <footer>
     <div class="container">
@@ -88,6 +105,25 @@
     </div>
   </footer>
 
+    <div id="successModal" class="modal">
+    <div class="modal-content">
+      <p>Formulário enviado com sucesso!</p>
+      <button id="closeModal">Fechar</button>
+    </div>
+  </div>
+
   <script src="js/app.js"></script>
+  <script>
+    const toggle = document.querySelector('.menu-toggle');
+    const nav = document.querySelector('.main-nav');
+    toggle.addEventListener('click', () => {
+      nav.classList.toggle('show');
+    });
+
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+
+
+
 </body>
 </html>
